# num_methods

./: LR1.ipynb  LR2.ipynb  LR3.ipynb  LR4.ipynb  LR5.ipynb  LR6.ipynb  LR7.ipynb  LR8.ipynb  main.py  pyproject.toml
