[project]
name = "num-methods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbconvert[webpdf]>=7.17.0",
    "numpy>=2.4.3",
    "pandoc>=2.4",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
